app/app/assets/stylesheets/cbv.scss
@forward "uswds";
@use "uswds" as *;

/*
 * Layout / body styles
 */
html {
  background-color: color("primary-darker");
  min-width: 320px;
}

/*
 * These comprise our strategy for making sure the footer stays put
 * at the foot of the site.
 */
#root {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#main-content {
  flex-grow: 1;
}

.usa-button--outline-email {
  // Because css rendering in email is fraught, we must replace the default
  // USWDS strategy of using a box-shadow (it doesn't appear at all in gmail).
  background-color: transparent;
  border: 2px solid #005ea2;
  color: #005ea2;
}

/*
 * Preheader component
 */
.cbv-header__preheader {
  background-color: color("primary-darker");
  @include u-padding-y(0.5);
}

.cbv-header__preheader__text {
  @include u-padding-y(0);
  color: color("white");
  font-size: font-size($theme-banner-font-family, 1);
  line-height: line-height($theme-banner-font-family, 2);

  @include at-media-max($theme-header-min-width) {
    margin-left: units($theme-site-margins-mobile-width);
  }
  @include at-media($theme-header-min-width) {
    @include clearfix;
    @include grid-container($theme-header-max-width);
  }
}

/*
 * Header / Navbar Component
 */
.cbv-header {
  align-items: center;
  color: color("primary-darker");
  display: flex;

  @include at-media-max($theme-header-min-width) {
    flex-wrap: wrap;
    align-items: flex-start;
  }
}

.cbv-header__title-group {
  display: flex;
  flex-direction: column;
  gap: units(1);

  .cbv-header__pilot-name {
    @include u-font("heading", 10);
    color: color("ink");
    font-weight: bold;

    @include at-media-max($theme-header-min-width) {
      font-size: size("heading", 3);
      margin: 0;
    }
  }

  .cbv-header__subtitle {
    @include u-font("heading", 7);
    color: color("ink");
    font-weight: normal;

    @include at-media-max($theme-header-min-width) {
      font-size: size("heading", 1);
      font-weight: 500;
    }
  }
}

.cbv-header__pilot-name {
  color: color("primary");
  flex-shrink: 0;

  @include at-media-max($theme-header-min-width) {
    @include u-margin-y(0.5);
    width: 100%;
  }
}

.cbv-header__nav {
  flex-basis: content;
}

.cbv-header__separator {
  @include u-padding-x(1);
}

.cbv-header__agency-logo {
  @include u-margin-right(1);
  height: 45px;

  @include at-media-max($theme-header-min-width) {
    height: 30px;
    max-width: 200px;
  }
}

.cbv-header__agency-logo--la_ldh {
  height: 45px;
  width: 320px;

  @include at-media-max($theme-header-min-width) {
    height: 30px;
    width: 200px;
    min-width: 125px;
    margin-top: 0.25rem;
  }
}

/*
 * Footer
 */
.cbv-footer {
  background-color: color("primary-darker");
}

.cbv-footer__content {
  color: color("white");

  @include at-media-max($theme-header-min-width) {
    margin-left: units($theme-site-margins-mobile-width);
  }

  @include at-media($theme-header-min-width) {
    @include clearfix;
    @include grid-container($theme-header-max-width);
  }
  @include u-font("sans", 4);
  @include u-padding-y(2);

  a,
  a:visited {
    color: color("white");
  }
}

.cbv-footer__item {
  @include u-margin-y(2);
}

.cbv-footer__logo-text {
  display: flex;
  flex-direction: column;
  gap: units(1);
}

.cbv-footer__logo-line1 {
  @include u-font("heading", 8);
}

.cbv-footer__logo-line2 {
  @include u-font("heading", 5);
  font-weight: normal;
}

.cbv-row-highlight td,
.cbv-row-highlight th {
  @include u-bg("yellow-5v");
}

.rotate {
  animation: 1s linear infinite rotate-con;
}

@keyframes rotate-con {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/**
 * Help Modal
 */
.help-modal__main-bullets {
  list-style-type: disc;
}

.help-modal__button {
  @include u-line-height("body", 2);
  @include u-text("left");
  @include u-margin-bottom(1);
  @include u-display("block");
}

/*
* Session timeout modal
*/
.invisible {
  visibility: hidden;
  position: absolute;
}

/*
* Session timeout page
*/
.timeout-notice {
  background-color: #eff6fb;
  border-color: #005ea2;
  margin-left: 0;
  max-width: 72ex;

  svg {
    color: #005ea2;
    font-size: 25px;
  }
}

/*
* Entry
*/
.divider {
  width: 125px;
  height: 10px;
  background-color: #d9e8f6;
}

.large-text {
  font-size: 16px;
}

.small-text {
  display: inline-block;
  font-size: 14px;
  line-height: 130%;
  margin-top: 8px;
}

/*
 * Synchronizations Page
 */
.synchronizations-indicator {
  align-items: center;
  display: flex;
  margin-bottom: 1rem;
  text-align: center;
  word-break: break-word;

  @include at-media("tablet") {
    flex-direction: column;
  }
}

.synchronizations-indicator__spinner {
  margin-right: 1rem;

  @include u-padding(1);
  @include u-border(0.5);
  @include u-radius("pill");
  @include at-media("tablet") {
    margin-right: 0;
  }
}

/*
* Copy link button
*/
input#invitation_link {
  border-right: none;
  height: 3rem;

  // hide on smaller screens
  display: none;

  @include at-media("tablet") {
    display: block;
  }
}

.copy-link-button {
  height: 3rem;
  margin-top: 0 !important;

  @include at-media("tablet") {
    border-radius: 0 0.25rem 0.25rem 0;
    border-left: none;
  }
}

.usa-button--success {
  background-color: color("green-cool-40v");

  &:hover {
    background-color: color("green-cool-40v");
  }
}

#session-timeout-modal.is-visible {
  // This is one additional 9 beyond Argyle's modal z-index to make sure
  // the timeout modal is always visible if displayed
  z-index: 9999999999;
}

/*
* Tables
*/

.cbv-table {
  max-width: 44rem; // 704px (44rem = 88 USWDS 8px units)
  border: units(1px) solid color("ink");

  tbody tr {
    border-bottom: units(1px) solid color("ink");

    &:last-child {
      border-bottom: none;
    }
  }
}

.usa-table--borderless.cbv-table thead th {
  background-color: color("blue-cool-5");
  border-bottom: units(1px) solid color("ink");
}

.usa-table--borderless.cbv-table .subheader-row th {
  background-color: color("blue-cool-5");
}

.subheader-row {
  > th {
    font-weight: bold;
    background-color: color("gray-cool-10");
  }
}

.usa-table--borderless .subheader-row th {
  background-color: color("gray-cool-10");
}

.activity-review-hours-table.usa-table--stacked .subheader-row th,
.activity-review-hours-table.usa-table--stacked tr.subheader-row:nth-child(odd) th {
  background-color: color("gray-cool-10");
}

// Make sure second col is aligned between both tables on desktop
.activity-review-org-table th,
.activity-review-hours-table th:not([colspan]),
.activity-review-hours-table td:first-child {
  width: 60%;
}

.activity-review-org-table {
  thead {
    border-top: units(0.5) solid color("ink");
  }

  th {
    border-top: units(1px) solid color("base-light");
  }

  td {
    border-top: 0;
  }

  tr:first-child th:first-child {
    border-top: 0;
  }
}

.activity-review-org-table.usa-table--stacked tr {
  border-bottom: units(1px) solid color("base-light");
}

.activity-review-org-table.usa-table--stacked tr:first-child {
  border-top: units(0.5) solid color("ink");
}

/*
* Payment details table column adjustments for consistent display with different content
*/
.payment-details-table {
  table-layout: fixed;
}

.payment-details-table .subheader-row th {
  width: 50%;
}

/*
 * Accordions
 */
.accordion-body {
  font-weight: normal;
}

/*
 * Utilities
 */
.list-style-disc {
  list-style-type: disc !important;
}

.display-contents {
  display: contents !important;
}

/*
 * Employer search result cards
 */
@include at-media-max($theme-header-min-width) {
  .cbv-employer-card__img img {
    max-height: 100px;
  }
}

/*
 * Field value list
 */
.cbv-field-value-list {
  margin-top: units(4);
}
.cbv-field-value-list__label {
  @include u-font('heading', 'sm');
}
.cbv-field-value-list__value {
  margin-top: units(0.5);
}

/*
 * Month indicator (volunteering hours input flow)
 */
.month-indicator {
  font-size: 1.125rem;
  font-weight: bold;
  color: #005EA2;
}

/*
 * Document upload page
 */
.document-uploads__preview {
  display: flex;
  align-items: center;
}
.document-uploads__preview-icon {
  box-sizing: content-box;
  color: color("gray-cool-40");
  flex-shrink: 0;
  height: units(4);
  padding: units(1);
  width: units(4);
}
.document-uploads__preview-filename {
  @include u-font("sans", 2);
  overflow: hidden;
  word-break: break-word;
}

